Updated AUTHORS and fixed some style errors in tests

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,6 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
+3k3n3@vagrant <clarencekene@outlook.com>
 Aly Alsayed <20812019100880@eng.zu.edu.eg>
+alyalsayed <alyalsayed@kali.aly.com>
